--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 server:
   port: 8888
   servlet:
+    context-path: /uid
     encoding:
       force: true
       charset: utf-8
@@ -50,11 +51,14 @@ mybatis-plus:
     banner: true
 
 uid-generator:
+  token: e296e6cc98d84c40b2d9f7b86287c6e6
   # 对于并发数要求不高、期望长期使用的应用, 可增加timeBits位数, 减少seqBits位数.
-  # 例如节点采取用完即弃的WorkerIdAssigner策略, 重启频率为12次/天, 那么配置成{"workerBits":23,"timeBits":31,"seqBits":9}时, 可支持28个节点以整体并发量14400 UID/s的速度持续运行68年.
+  # 例如节点采取用完即弃的WorkerIdAssigner策略, 重启频率为12次/天, 那么配置成{"workerBits":23,"timeBits":31,"seqBits":9}时,
+  # 可支持28个节点以整体并发量14400 UID/s的速度持续运行68年.
 
   # 对于节点重启频率频繁、期望长期使用的应用, 可增加workerBits和timeBits位数, 减少seqBits位数.
-  # 例如节点采取用完即弃的WorkerIdAssigner策略, 重启频率为24*12次/天, 那么配置成{"workerBits":27,"timeBits":30,"seqBits":6}时, 可支持37个节点以整体并发量2400 UID/s的速度持续运行34年.
+  # 例如节点采取用完即弃的WorkerIdAssigner策略, 重启频率为24*12次/天, 那么配置成{"workerBits":27,"timeBits":30,"seqBits":6}时,
+  # 可支持37个节点以整体并发量2400 UID/s的速度持续运行34年.
   timeBits: 29
   workerBits: 21
   seqBits: 13
